# sgr

./: .env  .env.example  .flake8  .gitignore  .mypy.ini  CLAUDE.md  Dockerfile  Historico.md  README_FORMATADOR.md  _app.py  anotacoes.txt  app copy.py  app.py  atualiza.py  boletos copy.py  boletos.py  clientes copy.py  clientes.py  dash_vendas copy.py  dash_vendas.py  entrypoint.sh  erro deploy.txt  estoque copy.py  estoque.py  extratos copy.py  extratos.py  fix_formatters.py  format_quick.py  formata.py  log erro.txt  login.py  logs-arecomarcelo-sgr-main-app.py-2025-09-02T19_51_25.657Z.txt  manual_server.py  manual_viewer.py  manual_viewer_simple.py  modules.py  mypy.ini  pyproject.toml  repository copy.py  repository.py  (+10 more)
.claude/: .fuse_hidden0000022c00000001  .fuse_hidden0000039300000001  .fuse_hidden0000a05200000002  .fuse_hidden0000cb7800000001
.claude/memory/: MEMORY.md  projeto_autocommit.md  projeto_natureza.md  projeto_permissoes.md
Recursos/: Ajustes.md  Comandos Desenvolvimento Python e Django.md
app/: models.py  settings.py
config/: settings.py
core/: container.py  container_recebimentos.py  container_vendas.py  error_handler.py  exceptions.py  logging_config.py
documentacao/: ANALISE_MELHORIAS_SGR.md  Ajustes Ranking Vendedores.md  Historico.md  LOGGING.md  Manual_Relatorio_Recebimentos.md  Manual_Relatorio_Vendas.md  README_REFATORACAO.md  requirements_refatorado.txt
domain/: validators.py  validators_simple.py
scripts/: atualiza.py  deploy_local.sh  predeploy.sh  rodar-aplicacao.sh  test_app.py
utils/: style_config.py  style_utils.py
(+35 files in other folders)
